feat: implement item return module and refactor UI
Backend (Database & Logic):
- Extended DTOs (MovementRowDTO, CategoryReportDTO, StoreContributionDTO) with the 'returned' field.
- Updated JPQL queries in StockMovementRepository to calculate SUM() for the RETURN type.
- Added logic in EntryService for saving returns, stock calculation (subtraction), and day finalization.
- Updated controllers (EntryController, ReportController) to handle new parameters and Base64 images.

Frontend (Daily Entry - entries.html):
- Refactored UI by migrating to native AdminLTE/Bootstrap classes (removed redundant custom CSS).
- Added a sticky action bar and optimized button layout for mobile devices.
- Added "Return (⇄)" column to the daily entry tables.
- Introduced dynamic JS suggestion for the "Waste" value (Received - Sold - Returned).

BI Analytics & PDF Export (reports.html, report_pdf.html):
- Introduced a 4th Pie Chart to display "Return Share".
- Expanded the grouped bar chart per store with return data.
- Added return column to summary tables and updated the Stock formula (Received - Sold - Waste - Returned).
- Adjusted CSS in the PDF template to render 4 charts in a single row (width: 25%).